Добился OutOfMemory за 5 минут работы приложения при SerialGC